--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'American poetry'
+- GITenberg
 title: 'Poems
 
   Vol. IV'
